load("@poetry//:dependencies.bzl", "dependency")

py_library(
    name = "ciconfig",
    srcs = [
        "evergreen.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        dependency(
            "structlog",
            group = "evergreen",
        ),
        dependency(
            "pyyaml",
            group = "core",
        ),
    ],
)
