load("@poetry//:dependencies.bzl", "dependency")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "ciconfig",
    srcs = [
        "__init__.py",
        "evergreen.py",
        "yaml_load.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        dependency(
            "structlog",
            group = "evergreen",
        ),
        dependency(
            "pyyaml",
            group = "core",
        ),
    ],
)
