load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_package(
    name = "npm_package",
    srcs = [
        "package.json",
        "plugin.js",
        "rules/no-print-fn.js",
        "rules/no-printing-tojson.js",
    ],
    package = "eslint-plugin-mongodb",
    visibility = ["//visibility:public"],
)
