load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "plugin.js",
        "rules/no-print-fn.js",
        "rules/no-printing-tojson.js",
    ],
    package = "eslint-plugin-mongodb",
    visibility = ["//visibility:public"],
)
