load("@poetry//:dependencies.bzl", "dependency")

py_library(
    name = "linter",
    srcs = [
        "__init__.py",
        "base.py",
        "filediff.py",
        "git.py",
        "git_base.py",
        "mongolint.py",
        "mypy.py",
        "parallel.py",
        "pydocstyle.py",
        "pylint.py",
        "runner.py",
        "yapf.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        dependency(
            "structlog",
            group = "evergreen",
        ),
        dependency(
            "gitpython",
            group = "evergreen",
        ),
    ],
)
